--- a/createAccount.html
+++ b/createAccount.html
@@ -15,7 +15,7 @@
 
   <script src="sign-up.js" defer></script>
 
-  <form action="/" method="get" class="form-container">
+  <form action="index.html" method="get" class="form-container">
     <h2>Sign Up</h2>
 
     <h3>Username</h3>
@@ -35,7 +35,7 @@
     <br>
 
     <span>
-      <a href="login">Or Login</a>
+      <a href="login.html">Or Login</a>
     </span>
   </form>
   
