--- a/inbox.html
+++ b/inbox.html
@@ -3,21 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Chit Chat Home</title>
+    <title>My Inbox</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
-    <link href="https://iconsstoreimagelibrary.gamedev46.repl.co/images/square-comment.png" rel="icon" type="image/png" />
-
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+    <link href="https://iconsstoreimagelibrary.gamedev46.repl.co/images/notifications.png" rel="icon" type="image/png" />
   </head>
   <body>
-    <script src="script.js" defer></script>
+
+    <script src="inbox.js" defer></script>
 
     <nav class="nav-bar">
-      <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/square-comment.png" class="logo-image" draggable="false">
+      <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/square-comment.png" class="logo-image" draggable="false" id="nav-image-link">
       <h2 class="logo-text">Chit Chat</h2>
 
-      <a href="#"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="nav-image"></a>
+      <a href="index.html"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="nav-image"></a>
 
       <a href="profile.html"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/user-default.png" alt="settings" draggable="false" class="nav-image"></a>
 
@@ -25,11 +26,11 @@
         <button class="nav-image-button"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/menu.png" alt="menu" class="nav-button-image"></button>
 
         <div class="dropdown-back">
-          <a href="#"> <p> Home </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="index.html"> <p> Home </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="dropdown-image"></a>
 
           <a href="profile.html"> <p> Profile </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/user-default.png" alt="home" draggable="false" class="dropdown-image"></a>
 
-          <a href="inbox.html"> <p> Inbox </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/notifications.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="#"> <p> Inbox </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/notifications.png" alt="home" draggable="false" class="dropdown-image"></a>
 
           <a href="settings.html"> <p> Docs </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/files.png" alt="home" draggable="false" class="dropdown-image"></a>
 
@@ -40,13 +41,11 @@
     </nav>
 
     <div id="display-column" class="display-column">
-      <form class="text-send" id="text-send" accesskey="#">
-        <input type="text" id="messageFromUser" autocomplete="off" placeholder="What is going on?">
-        <button id="user-form">Send</button>
-      </form>
+      <div class="notification-box">
+          <h2>Welcome New User!</h2>
 
-      <h2 class="refresh" id="refresh"><i class="fas fa-sync-alt"></i></h2>
-
+          <p>Welcome to Chit Chat new user,we hope you have a great time chatting and having fun! Chit Chat is a simple messaging application free for everyone to use, inlcuding you! So get yur fingers ready, it's chatting time!</p>
+        </div>
     </div>
   </body>
 </html>
