--- a/profile.html
+++ b/profile.html
@@ -15,9 +15,9 @@
 
     <nav class="nav-bar">
       <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/square-comment.png" class="logo-image" draggable="false" id="nav-image-link"></a>
-      <h2 class="logo-text">ChatComm Talk</h2>
+      <h2 class="logo-text">Chit Chat</h2>
 
-      <a href="/"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="nav-image"></a>
+      <a href="index.html"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="nav-image"></a>
 
       <a href="#"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/user-default.png" alt="settings" draggable="false" class="nav-image"></a>
 
@@ -25,15 +25,15 @@
         <button class="nav-image-button"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/menu.png" alt="menu" class="nav-button-image"></button>
 
         <div class="dropdown-back">
-          <a href="/"> <p> Home </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="index.html"> <p> Home </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="dropdown-image"></a>
 
           <a href="#"> <p> Profile </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/user-default.png" alt="home" draggable="false" class="dropdown-image"></a>
 
-          <a href="inbox"> <p> Inbox </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/notifications.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="inbox.html"> <p> Inbox </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/notifications.png" alt="home" draggable="false" class="dropdown-image"></a>
 
-          <a href="settings"> <p> Docs </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/files.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="settings.html"> <p> Docs </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/files.png" alt="home" draggable="false" class="dropdown-image"></a>
 
-          <a href="login"> <p> Sign Out </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/upload.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="login.html"> <p> Sign Out </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/upload.png" alt="home" draggable="false" class="dropdown-image"></a>
 
         </div>
       </div>
