--- a/private-message.html
+++ b/private-message.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Chit Chat Home</title>
+    <title>Chit CHat DM user</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 
     <link href="https://iconsstoreimagelibrary.gamedev46.repl.co/images/square-comment.png" rel="icon" type="image/png" />
@@ -11,13 +11,12 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   </head>
   <body>
-    <script src="script.js" defer></script>
 
     <nav class="nav-bar">
       <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/square-comment.png" class="logo-image" draggable="false">
       <h2 class="logo-text">Chit Chat</h2>
 
-      <a href="#"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="nav-image"></a>
+      <a href="index.html"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="nav-image"></a>
 
       <a href="profile.html"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/user-default.png" alt="settings" draggable="false" class="nav-image"></a>
 
@@ -25,7 +24,7 @@
         <button class="nav-image-button"><img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/menu.png" alt="menu" class="nav-button-image"></button>
 
         <div class="dropdown-back">
-          <a href="#"> <p> Home </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="dropdown-image"></a>
+          <a href="index.html"> <p> Home </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/home.png" alt="home" draggable="false" class="dropdown-image"></a>
 
           <a href="profile.html"> <p> Profile </p> <img src="https://iconsstoreimagelibrary.gamedev46.repl.co/images/user-default.png" alt="home" draggable="false" class="dropdown-image"></a>
 
@@ -44,8 +43,6 @@
         <input type="text" id="messageFromUser" autocomplete="off" placeholder="What is going on?">
         <button id="user-form">Send</button>
       </form>
-
-      <h2 class="refresh" id="refresh"><i class="fas fa-sync-alt"></i></h2>
 
     </div>
   </body>
